# futari

./: README.md
futari-server/: CHANGELOG.md  Cargo.toml
futari-server/crates/futari-config/: Cargo.toml
futari-server/crates/futari-config/src/: server_config.rs
futari-server/crates/futari_dto/src/: lib.rs
futari-server/crates/futari_dto/src/action_logs/request/: get_action_logs.rs  stream_actions.rs
futari-server/crates/futari_dto/src/action_logs/response/: action_log.rs
futari-server/crates/futari_dto/src/auth/response/: login.rs  logout.rs
futari-server/crates/futari_dto/src/moderation/request/: list_logs.rs
futari-server/crates/futari_dto/src/moderation/response/: list_logs.rs
futari-server/crates/futari_dto/src/validator/: json_validator.rs  path_validator.rs  query_validator.rs
futari-server/crates/futari_errors/src/: errors.rs
futari-server/crates/futari_server/src/: main.rs  state.rs
futari-server/crates/futari_server/src/api/: openapi.rs  routes.rs
futari-server/crates/futari_server/src/bridge/: turnstile_client.rs
futari-server/crates/futari_server/src/connection/: r2_assets_conn.rs
futari-server/crates/futari_server/src/extractors/: turnstile.rs
futari-server/crates/futari_server/src/middleware/: anonymous_user.rs  cors.rs  rate_limit.rs
futari-server/crates/futari_server/src/permission/: permission_service.rs
futari-server/crates/futari_server/src/repository/: common.rs
futari-server/crates/futari_server/src/utils/: r2_url.rs  redis_cache.rs  session_helper.rs
futari-server/crates/futari_worker/src/: main.rs
(+172 files in other folders)
